Fixing bug where search bar on mobile interfered with the home section wiewport height

--- a/css/style.css
+++ b/css/style.css
@@ -63,6 +63,12 @@ p {
 }
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
+body {
+    background-color: var(--bg-color);
+    overflow-x: hidden;
+
+}
+
 header {
     position: fixed;
     width: 100%;
@@ -118,7 +124,7 @@ header {
 }
 
 #home {
-    height: 100%;
+    height: 100vh;
     width: 100%;
     background-size: cover;
     background-position: center;
